# custom-printer-lib

./: Cargo.toml  README.md
examples/: bitimage.rs
src/: lib.rs
tests/data/: thermal.b24  thermal.b8  thermal.txt
